<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_layout_root_spam"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rr_header"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/appclr">

            <ImageView
                android:id="@+id/iv_back_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:paddingBottom="5dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:src="@drawable/back_arrow"
                android:visibility="gone"/>


            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:paddingLeft="50dp"
                android:src="@drawable/chat" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/blue_bg">

            <com.sourcefuse.clickinandroid.utils.ClickInTextView
                android:id="@+id/tv_profile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/txt_setting"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                geekui:customFont="AvenirNextLTPro-BoldCn_0.otf"
                />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/rr_header"
        android:weightSum="2">

        <com.sourcefuse.clickinandroid.utils.ClickInTextView
            android:id="@+id/spam_header_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="Spam or Abuse"
            android:textColor="@color/black"
            geekui:customFont="AvenirNextLTPro-BoldCn_0.otf"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <com.sourcefuse.clickinandroid.utils.ClickInTextView
                android:id="@+id/report_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report something. "
                android:textSize="20sp"
                geekui:customFont="AvenirNextLTPro-BoldCn_0.otf"
                android:textStyle="bold" />

            <com.sourcefuse.clickinandroid.utils.ClickInTextView
                android:id="@+id/spam_chose_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose One"
                android:textColor="@color/dark_gray"
                geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                android:textSize="20sp" />
        </LinearLayout>


       </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:alwaysDrawnWithCache="false"
        android:background="@drawable/r_owner_profile_bg"
        android:fadingEdgeLength="0dp"
        android:overScrollMode="never"
        android:paddingTop="2dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:layout_below="@+id/linear_layout_text">



       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rbg_spam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_one"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:button="@drawable/radio_button_drawable"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/spam_msg_one"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                   />


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_two"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_two"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                   />


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_three"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_three"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                   />


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_four"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_four"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                    />


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_five"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_five"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"/>


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_six"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_six"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"/>


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_seven"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_seven"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"/>


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_eight"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_eight"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"/>


                <com.sourcefuse.clickinandroid.utils.ClickInRadioButton
                    android:id="@+id/spam_radio_nine"
                    style="@style/whitebackground"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="2dp"
                    android:button="@drawable/radio_button_drawable"
                    android:padding="10dp"
                    android:text="@string/spam_msg_nine"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"/>


            </RadioGroup>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <com.sourcefuse.clickinandroid.utils.ClickInEditBox
                    android:id="@+id/spam_edit_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:focusableInTouchMode="true"
                    android:gravity="top"
                    android:maxLines="20"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/spam_edit_hint"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="40dp"
                    android:imeOptions="actionDone"
                    android:textColorHint="@color/search_txt"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.sourcefuse.clickinandroid.utils.ClickInTextView
                    android:id="@+id/btn_report"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/active_yes_btn"
                    android:gravity="center"
                    android:text="REPORT"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    geekui:customFont="AvenirNextLTPro-MediumCn_0.otf"
                    android:layout_below="@+id/spam_edit_txt"/>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
    </RelativeLayout>
</RelativeLayout>