<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_pattern_bg">

    <RelativeLayout
        android:id="@+id/rr_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/appclr">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_arrow"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/iv_notification_list"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/chat" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_followerdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rr_header"
        android:visibility="gone">


        <ListView
            android:id="@+id/list_follower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:dividerHeight="2dp"
            android:scrollbars="none" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_empty_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rr_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_follower_msgI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/tv_follower_empty_msgone"
            android:textColor="@color/appclr"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_follower_msgII"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_follower_msgI"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/tv_follower_empty_msgtwo"
            android:textColor="@color/appclr"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_bg">

        <TextView
            android:id="@+id/tv_profile_txt_wer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_follower"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>